# framefit

./: .gitignore  AGENTS.md  CHANGELOG.md  DEVLOG.md  IMPROVEMENT_PLAN.md  NOTICE  README.md  pyproject.toml
research/: RESULTS.md  RESULTS_A.md  detectors.py  detectors_dl.py  eval_against_log.py  make_gallery.py  preprocess.py  run_benchmark.py  run_dl_experiment.py
src/framefit/: __init__.py  batch_replay.py  cli.py  feedback.py  geometry.py  io.py  picker.py  pipeline.py  preprocess.py  review_server.py  signals.py
src/framefit/backends/: __init__.py  auto.py  base.py  classic.py  docaligner.py
tests/: test_smoke.py
